<resources>
    <string name="app_name">EventCreater</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="title_activity_load_contacts">LoadContactsActivity</string>
    <string name="search_hint">Search Contacts</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="edit">EDIT</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="create">Create</string>
    <string name="recording">recording</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="venue">Venue</string>
    <string name="delete">Delete</string>
    <string name="location">Location</string>
    <string name="note">Note</string>
    <string name="done">Done</string>
    <string name="title_activity_settings">Settings</string>
    <string name="minutes">Minutes</string>

    <!-- String value for settings -->
    <string-array name="pref_num_concurrency">
        <item>NONE</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
    </string-array>
    <string-array name="pref_num_concurrency_values">
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
    </string-array>
    <string-array name="pref_time_alarm">
        <item>1min</item>
        <item>5mins</item>
    </string-array>
    <string-array name="pref_time_alarm_values">
        <item>1</item>
        <item>5</item>
    </string-array>

    <!-- Strings related to Settings -->
</resources>
