<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cong.eventcreater.UI.CreateEventActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="3dp"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true" >

        <android.support.v7.widget.Toolbar
            android:id="@+id/create_event_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/toolbar"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/create_event_toolbar"
            android:layout_above="@+id/createEventBottom">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/event_layout_grid"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:clickable="true"
            android:focusableInTouchMode="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/layout_event_name">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Event Name: "
                    android:id="@+id/lbCreateEventName" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="10px"
                    android:id="@+id/inputEventName"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    android:hint="TITLE" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_event_start_Date"
                android:layout_below="@id/layout_event_name">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start_date"
                        android:id="@+id/selectStartDate"
                        android:background="@color/button"
                        android:textColor="@color/button_text"/>

                    <Button
                        android:id="@+id/selectStartTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/selectStartDate"
                        android:background="@color/button"
                        android:text="@string/start_time"
                        android:textColor="@color/button_text" />
                </RelativeLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/layout_event_start_time_view"
                android:layout_below="@id/layout_event_start_Date">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/eventStartDate" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/eventStartTime" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/layout_event_end_date"
                android:layout_below="@id/layout_event_start_time_view">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_date" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_date"
                    android:id="@+id/selectEndDate"
                    android:background="@color/button"
                    android:textColor="@color/button_text"/>

                <Button
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:text="@string/end_time"
                    android:id="@+id/selectEndTime"
                    android:background="@color/button"
                    android:textColor="@color/button_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/layout_event_end_date"
                android:id="@+id/layout_event_end_date_view">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/eventEndDate" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/eventEndTime" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/layout_event_end_date_view"
                android:id="@+id/layout_attendees">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Attendees: "
                    android:id="@+id/lbAttendees" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/contact_list"
                    android:orientation="vertical" />
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_add"
                    android:background="@android:color/transparent"
                    android:id="@+id/buttonLoadAttendees" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/layout_attendees"
                android:id="@+id/layout_venue">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/venue"
                    android:id="@+id/venue"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/inputVenue"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    android:hint="Venue" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/layout_venue"
                android:id="@+id/layout_location">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location" />
                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/inputLatitude"
                    android:imeOptions="actionDone"
                    android:hint="Latitude"
                    android:inputType="numberDecimal|numberSigned"/>
                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/inputLongitude"
                    android:imeOptions="actionDone"
                    android:hint="Longitude"
                    android:inputType="numberDecimal|numberSigned"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/layout_location"
                android:id="@+id/layout_note">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note" />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/note"
                    android:id="@+id/inputNote" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/layout_note"
                android:id="@+id/layout_recording">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Recording" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/recording"
                    android:text="@string/recording"
                    android:background="@color/button"
                    android:textColor="@color/button_text"/>
                <Button
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/playRecording"
                    android:text="PLAY"
                    android:background="@color/button"
                    android:textColor="@color/button_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/layout_recording"
                android:id="@+id/layout_alarm">
                <TextView
                    android:text="Alert befor: "
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/minutes"
                    android:id="@+id/inputSaftyTime"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_alarm">
                <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                    android:name="com.google.android.gms.maps.MapFragment"
                    android:layout_below="@id/layout_recording"
                    android:id="@+id/map"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:id="@+id/createEventBottom">
        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:text="@string/cancel"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:id="@+id/create_event_cancel"
            android:background="@color/button"
            android:textColor="@color/button_text"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:text="@string/done"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:id="@+id/create_event_ok"
            android:background="@color/button"
            android:textColor="@color/button_text"/>
    </LinearLayout>
</RelativeLayout>
